<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- menu -->
    <string name="menu_search_name">Search</string>
    <string name="menu_about_name">About</string>
    <string name="menu_get_involved_name">Get involved</string>
    <string name="menu_resources_name">Resources</string>
    <string name="menu_licenses_name">Open-source licenses</string>

    <!-- titles -->
    <string name="title_group_list">Field Guide</string>
    <string name="subtitle_group_list">Insects of the Australian Alps</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- search -->
    <string name="search_hint">e.g. Grasshopper</string>
    <string name="voice_search_hint">Speak a keyword, e.g. "flies"</string>

    <!-- Shown above search results when we receive a search request. -->
    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\"</item>
        <item quantity="other">%1$d results for \"%2$s\"</item>
    </plurals>
    <!-- Search failure message. -->
    <string name="no_results">No species found for \"%s\"</string>

    <!-- splash/download ui -->
    <string name="text_paused_cellular">Would you like to enable downloading over cellular connections? Depending on your data plan, this may cost you money.</string>
    <string name="text_paused_cellular_2">If you choose not to enable downloading over cellular connections, the download will automatically resume when Wi-Fi is available.</string>
    <string name="text_button_resume_cellular">Resume download</string>
    <string name="text_button_wifi_settings">Wi-Fi settings</string>
    <string name="text_verifying_download">Verifying Download</string>
    <string name="text_validation_complete">Resource file validation complete.  Select OK to exit.</string>
    <string name="text_validation_failed">Resource file validation failed.</string>
    <string name="text_button_pause">Pause Download</string>
    <string name="text_button_resume">Resume Download</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_cancel_verify">Cancel Verification</string>

    <!-- Group details -->
    <string name="group_tab_species_list">Species</string>
    <string name="group_tab_other">Other information</string>
    <string name="group_heading_description">Description</string>
    <string name="group_heading_icon_credit">Icon credit</string>
    <string name="group_heading_icon_license">Icon license</string>

    <!-- Species details -->
    <string name="species_tab_details">Details</string>
    <string name="species_tab_other">Other</string>
    <string name="species_heading_description">Description</string>
    <string name="species_heading_image_license">Images license</string>
    <string name="species_heading_taxonomy">Taxonomy</string>
    <string name="species_taxonomy_order">Order:</string>
    <string name="species_taxonomy_family">Family:</string>
    <string name="species_taxonomy_genus">Genus:</string>
    <string name="species_taxonomy_species">Species:</string>

    <!-- Preferences -->
    <string name="pref_analytics_title">Send usage statistics</string>
    <string name="pref_analytics_summary">Send your usage statistics anonymously for improvements</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_summary">About the Field Guide</string>
    <string name="pref_licence_title">Open source licences</string>
    <string name="pref_licence_summary">Various open source licences included as part of the Field Guide</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_version_summary">1.0</string>


    <!-- data -->
    <string name="distributioninfo">This map is based on specimens held in Australia\'s museums. Museums do not collect from all possible locations so these maps may underestimate the actual range of the species. The collections also include historical records, so the map may show localities where a species was once found but is no longer. Interpret this map as \'the species is found within the green or blue highlighted areas where suitable habitat occurs\'.</string>

    <string name="about_string">
        <![CDATA[
            <html>
            <head>
            </head>
            <body>
              <h1>Code</h1>
              <section>
              <p>Based on Museum Victoria\'s <a href="http://github.com/museumvictoria/mv-fieldguide-android"><em>Field Guide to Victorian Fauna</em></a>.</p>
              </section>
              <h1>Acknowledgements</h1>
              <section>
              <p>The development of this field guide was made possible by grants from the <a href="http://nwf.org.au">Norman Wettenhall Foundation</a> and the <a href="http://sustainable.unimelb.edu.au">Melbourne Sustainable Society Institute</a>.</p>
              </section>
              <h1>Images</h1>
              <section>
              <p>The images in this app are from the collections of people involved in this project, or sourced from external photographers under Creative Commons Licenses. All images are credited to the photographer.</p>
              </section>
              <h1>Project contributors</h1>
              <section>
              <p>Harry Slatyer, Rachel Slatyer, Kate Umbers, Ainsley Seago, Nikolai Tatarnic</p>
              </section>
            </body>
            </html>
        ]]>
    </string>

    <string name="get_involved_string">
        <![CDATA[
            <html>
            <head>
            </head>
            <body>
            <p>There are many hundreds of insect species in the Australian Alps that are not yet included in this field guide. We will continue to build on the number of species, and you can help!</p>

            <p>
            All you need to do is:<br>
            1. Take photos! When you\'re out enjoying the mountains, keep a sharp eye out for insects and keep your camera ready.<br>
            2. Keep a note of where the photo was taken. GPS coordinates (latitude and longitude) are the best and you can get them from Google Maps, by using a compass or GPS app on your smart phone, or from a dedicated GPS device. With or without the coordinates, a description of the location is also useful.<br>
            3. Join <a href="http://www.bowerbird.org.au">BowerBird</a>. BowerBird is a web-based biodiversity workspace, which anyone can get involved in.<br>
            4. Upload your photos onto the <em>Insects of the Australian Alps Project</em> page on BowerBird. BowerBird is a community workspace. If you can\'t identify your insect, that\'s OK - others can help!<br>
            </p>

            <p>
            By being involved you will be helping to:<br>
            &#8226; Develop this field guide into a comprehensive source of information on Australia\'s mountain insects.<br>
            &#8226; Determine which species are found in the Australian Alps.<br>
            &#8226; Build knowledge on where species occur (very little is known about most insect species in the Australian Alps).<br>
            &#8226; Detect and monitor changes in where species occur.<br>
            </p>
            </body>
            </html>
        ]]>
    </string>

    <string name="resources_string">
        <![CDATA[
            <html>
            <head>
            </head>
            <body>
            <h1>Books</h1>
            <section>
            <p>A Field Guide to Wildlife of the Australian Snow Country (2012) by Ken Green and William Osborne</p>
            <p>Australian Alps: Kosciuszko, Alpine and Namadgi National Parks (2015) by Deirdre Slattery</p>
            <p>Insects of South-Eastern Australia: an Ecological and Behavioural Guide (2016) by Roger Farrow</p>
            </section>

            <h1>Apps</h1>
            <section>
            <p>Field Guide to Victorian Fauna (Play Store)</p>
            <p>Field Guide to NSW Fauna (Play Store)</p>
            <p>Field Guide to ACT Fauna (Play Store)</p>
            </section>

            <h1>Other</h1>
            <section>
            <p>Australian Alps smartphone guide and map (available <a href="http://theaustralianalps.wordpress.com/the-alps-partnership/publications-and-research/australian-alps-smartphone-guide-and-map/">here</a>)</p>
            </section>
            </body>
            </html>
        ]]>
    </string>

    <string name="threatenedstatusinfo">Hi</string>

    <!-- open source licence info -->
    <string name="opensourcelicences">
        <![CDATA[
          <html>
          <head>
          <style type="text/css">
                body {color: #ffffff; font: 15px/23px "Helvetica Neue"; }
                section { border-top: 1px solid rgba(190,210,159,0.75); width: 100%; padding: 8px 0 0 0; margin: 0 auto; clear: both;}
                p { margin: 0 0 20px 10; }
                a { color: #749f36; text-decoration: none; }
          </style>
          </head>
          <body>

             <h1>Museum Victoria&#8217;s Field Guide to Victorian Fauna</h1>
             <h4>Copyright &copy; 2013 Museum Victoria</h4>
             <section>
          <p>The Field Guide is built using open source software:</p>
                 <ul>
                     <li><a href="http://actionbarsherlock.com/">ActionBarSherlock</a> - <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License</a></li>
                     <li><a href="https://github.com/sephiroth74/ImageViewZoom">ImageViewZoom</a> - <a href="http://opensource.org/licenses/mit-license.php">MIT License</a></li>
                     <li><a href="http://source.android.com/">The Android Open Source Project</a> - <a href="http://source.android.com/source/licenses.html">(mainly) Apache License</a>
                 </ul>
             </section>
            </body>
            </html>
        ]]>
    </string>

</resources>
