<menu xmlns:android="http://schemas.android.com/apk/res/android" 
xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|always"
        android:title="@string/menu_search_name"/>

    <item
        android:id="@+id/menu_about"
        android:showAsAction="collapseActionView|never"
        android:title="@string/menu_about_name"/>

    <item
        android:id="@+id/menu_get_involved"
        android:showAsAction="collapseActionView|never"
        android:title="@string/menu_get_involved_name"/>

    <item
        android:id="@+id/menu_resources"
        android:showAsAction="collapseActionView|never"
        android:title="@string/menu_resources_name"/>

    <item
        android:id="@+id/menu_licenses"
        android:showAsAction="collapseActionView|never"
        android:title="@string/menu_licenses_name"/>

</menu>
