<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    android:padding="@dimen/details_page_padding" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/SpeciesDetailsSubheading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_heading_description"/>

        <TextView
            style="@style/SpeciesDetailsText"
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/SpeciesDetailsSubheading"
            android:id="@+id/icon_credit_heading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_heading_icon_credit"/>

        <TextView
            style="@style/SpeciesDetailsText"
            android:id="@+id/icon_credit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/SpeciesDetailsSubheading"
            android:id="@+id/icon_license_heading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_heading_icon_license"/>

        <TextView
            style="@style/SpeciesDetailsText"
            android:id="@+id/icon_license"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"/>

    </LinearLayout>

</ScrollView>
