<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/group_item_background"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/group_details_padding"
        android:paddingRight="@dimen/group_details_padding"
        android:paddingTop="@dimen/group_details_padding"
        android:visibility="gone">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/group_details_icon"
            android:layout_gravity="center_horizontal"
            android:layerType="software"
            android:scaleType="fitCenter"/>

        <TextView
            style="@style/SpeciesDetailsSubheading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_heading_description"/>

        <TextView
            style="@style/SpeciesDetailsText"
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/SpeciesDetailsSubheading"
            android:id="@+id/icon_credit_heading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_heading_icon_credit"/>

        <TextView
            style="@style/SpeciesDetailsText"
            android:id="@+id/icon_credit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/SpeciesDetailsSubheading"
            android:id="@+id/icon_license_heading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_heading_icon_license"/>

        <TextView
            style="@style/SpeciesDetailsText"
            android:id="@+id/icon_license"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/expand_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:src="@drawable/ic_expand_more_white_24dp"/>

</LinearLayout>
